[gd_scene load_steps=10 format=3 uid="uid://biqcfjfvwqhbf"]

[ext_resource type="Script" uid="uid://fr2300qsdjtt" path="res://scenes/spinbox_with_buttons/spinbox_with_buttons.gd" id="1_3fiam"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3fiam"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7hqf7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7em0f"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k1qa4"]
corner_radius_top_left = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3fiam"]
bg_color = Color(0.333333, 0.333333, 0.333333, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k1qa4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b5oed"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_right = 5
corner_radius_bottom_right = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4hy5j"]
corner_radius_top_right = 5
corner_radius_bottom_right = 5

[node name="SpinboxWithButtons" type="HBoxContainer"]
offset_right = 183.0
offset_bottom = 44.0
theme_override_constants/separation = 0
script = ExtResource("1_3fiam")

[node name="Subtract" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_3fiam")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_7hqf7")
theme_override_styles/hover = SubResource("StyleBoxFlat_7em0f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_k1qa4")
theme_override_styles/normal = SubResource("StyleBoxFlat_7em0f")
text = " - "

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3fiam")

[node name="ValueDisplay" type="Label" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = " 0 "

[node name="Add" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_3fiam")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_k1qa4")
theme_override_styles/hover = SubResource("StyleBoxFlat_b5oed")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4hy5j")
theme_override_styles/normal = SubResource("StyleBoxFlat_b5oed")
text = " + "

[connection signal="pressed" from="Subtract" to="." method="_on_subtract_pressed"]
[connection signal="pressed" from="Add" to="." method="_on_add_pressed"]
